Bug 511305 - Regression: folder thumbnails are generated despite the option being deactivated in settings in dolphin
Summary: Regression: folder thumbnails are generated despite the option being deactiva...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 6.19.0
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: KIO Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-10-29 09:16 UTC by ripleytom
Modified: 2025-11-28 09:10 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ripleytom 2025-10-29 09:16:08 UTC
SUMMARY
Dolphin generates thumbnails for folders when folder thumbnails area deactivated and previews are enabled. The issue seems to lie in KIO or the plugin itself.

STEPS TO REPRODUCE
1. Disable all thumbnails in Settings=>Interface=>Previews 
2. View Settings in Compact mode with Previews enabled

OBSERVED RESULT
Folder thumbnails being created in .cache/thumbnails/

EXPECTED RESULT
No thumbnails being created.

SOFTWARE/OS VERSIONS
Operating System: Gentoo Linux 2.18
KDE Plasma Version: 6.5.0
KDE Frameworks Version: 6.19.0
Qt Version: 6.9.3

ADDITIONAL INFORMATION
This is a regression, I can't really pinpoint the exact version but thumbnails were not created before I last updated(~last 2 months).

I did a bit of debugging, as far as I could:
-Dolphin calls filePreview with an empty(not nullptr) enabledPLugins.
-FilePreviewJob is called with an empty mimeMap
-The thumbnail is generated in slotStatFile
-m_plugin is never initialized and is the default one(I'm not sure this is expected, it seems weird to me)
-KIO::TransferJob "thumbnail" schema is called with this( https://github.com/KDE/kio/blob/master/src/gui/filepreviewjob.cpp#L594 ):
kf.kio.gui: mimeType: "inode/directory"
kf.kio.gui: width "0"
kf.kio.gui: height "0"
kf.kio.gui: plugin ""
kf.kio.gui: enabledPlugins ""

And it ends up generating a thumbnail.
Comment 1 Méven 2025-11-28 09:10:23 UTC
Git commit ea4fab2964c4c8476a2c1dd92a204009a838f646 by Méven Car, on behalf of Ripley Tom.
Committed on 28/11/2025 at 09:03.
Pushed by meven into branch 'master'.

FilePreviewJob: Abort preview if no plugin is found

M  +9    -6    src/gui/filepreviewjob.cpp
M  +1    -1    src/gui/filepreviewjob.h

https://invent.kde.org/frameworks/kio/-/commit/ea4fab2964c4c8476a2c1dd92a204009a838f646