FilePreviewJob: Abort preview if no plugin is found

BUG: 511305